; ModuleID = '/home/carl/AnghaBench/netdata/database/engine/extr_pagecache.c_init_metrics_index.c'
source_filename = "/home/carl/AnghaBench/netdata/database/engine/extr_pagecache.c_init_metrics_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rrdengine_instance = type { %struct.page_cache }
%struct.page_cache = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rrdengine_instance*)* @init_metrics_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_metrics_index(%struct.rrdengine_instance* %0) #0 {
  %2 = alloca %struct.rrdengine_instance*, align 8
  %3 = alloca %struct.page_cache*, align 8
  store %struct.rrdengine_instance* %0, %struct.rrdengine_instance** %2, align 8
  %4 = load %struct.rrdengine_instance*, %struct.rrdengine_instance** %2, align 8
  %5 = getelementptr inbounds %struct.rrdengine_instance, %struct.rrdengine_instance* %4, i32 0, i32 0
  store %struct.page_cache* %5, %struct.page_cache** %3, align 8
  %6 = load %struct.page_cache*, %struct.page_cache** %3, align 8
  %7 = getelementptr inbounds %struct.page_cache, %struct.page_cache* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load %struct.page_cache*, %struct.page_cache** %3, align 8
  %10 = getelementptr inbounds %struct.page_cache, %struct.page_cache* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  store i32* null, i32** %11, align 8
  %12 = load %struct.page_cache*, %struct.page_cache** %3, align 8
  %13 = getelementptr inbounds %struct.page_cache, %struct.page_cache* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = call i64 @uv_rwlock_init(i32* %14)
  %16 = icmp eq i64 0, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @uv_rwlock_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
